[package]
name = "bevy_reader_camera"
version = "0.1.0"
authors = ["gavlig"]
edition = "2021"
exclude = [".vscode/**"]
description = ""
license = ""
repository = "https://github.com/gavlig/bevy_reader_camera"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["bevy_render"] }
lerp = "0.4.0"
